--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-hellohello
-heeeeeeeey
-
-okutaniです
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <title>YAMAMOTOS SITE</title>
+    <style>
+     body {
+       width: 940px;
+       margin: 0 auto;
+     }
+    </style>
+   </head>
+  <body>
+    <h1>YAMAMOTO!</h1>
+    <p>やまもとやま</p>
+  </body>
+</html>
